--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -36,16 +36,37 @@
 		<script src="{% static 'js/medium-editor/medium-editor.js' %}"></script>
 		<link rel="stylesheet" href="{% static 'css/medium-editor/medium-editor.css' %}">
 		<link rel="stylesheet" href="{% static 'css/medium-editor/themes/default.css' %}">
+		
 		<!-- Select2 (for tag autocomplete) -->
 		<link href="{% static 'js/select2/css/select2.min.css' %}" rel="stylesheet" />
 		<script src="{% static 'js/select2/js/select2.min.js' %}"></script>
+		
 		<!-- Charts.js for Dashboard -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
 		{% analytical_head_bottom %}
+		
 		<!-- Slick (ick) Image Carousel CSS-->
 		<link rel="stylesheet" type="text/css" href="{% static 'slick/slick.css' %}"/>
 		{% block json-ld %}
 		{% endblock %}
+
+		<!-- Twitter -->
+		<script>
+			window.twttr = (function(d, s, id) {
+	  			var js, fjs = d.getElementsByTagName(s)[0],
+	    		t = window.twttr || {};
+	  			if (d.getElementById(id)) return t;
+	  			js = d.createElement(s);
+	  			js.id = id;
+				js.src = "https://platform.twitter.com/widgets.js";
+				fjs.parentNode.insertBefore(js, fjs);
+				t._e = [];
+				t.ready = function(f) {
+					t._e.push(f);
+				};
+	  			return t;
+			}(document, "script", "twitter-wjs"));
+		</script>
 	</head>
 	<body data-spy="scroll" data-target="#fixed-nav">
 		{% analytical_body_top %}
