fixed building of the week bug

--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -112,6 +112,7 @@
 	
 
 	<div class="row">
+		{% if page.building_of_the_week %}
 		<div class="col-xs-12 col-md-4"><!-- Building of the Week -->
 			<h1 class="front-page-heading">Building of the Week</h1>
 			<div class="row">
@@ -123,6 +124,7 @@
 				</div>
 			</div>
 		</div><!-- / Building of the Week -->
+		{% endif %}
 		<div class="col-xs-12 col-md-8"><!-- Help Movie -->
 			<h1 class="front-page-heading">Browsing the Map</h1>
 			<div class="embed-responsive embed-responsive-16by9">
