--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -119,7 +119,7 @@
 				<div class="col-xs-12">
 					<a href="{% url 'detail' page.building_of_the_week.id %}#images"><img src="{% thumbnail page.building_of_the_week.thumbnail 400x225 crop='0,0' %}" class="img-rounded" style="width: 100%;"></a>
 					<h3><a href="{% url 'detail' page.building_of_the_week.id %}">{{ page.building_of_the_week }}</a></h3>
-					<p class="lead">We don't know much about this building yet. Can you tell us something about it's history?</p>
+					<p class="lead">We don't know much about this building yet. Can you tell us something about its history?</p>
 					<p class="lead"><a href="{% url 'ugc_choice' page.building_of_the_week.id %}">Contribute it here</a></p>
 				</div>
 			</div>
