--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -113,8 +113,8 @@
 
 	<div class="row">
 		{% if page.building_of_the_week %}
-		<div class="col-xs-12 col-md-4"><!-- Building of the Week -->
-			<h1 class="front-page-heading">Building of the Week</h1>
+		<div class="col-xs-12 col-md-4"><!-- Building of the Month -->
+			<h1 class="front-page-heading">Building of the Month</h1>
 			<div class="row">
 				<div class="col-xs-12">
 					<a href="{% url 'detail' page.building_of_the_week.id %}#images"><img src="{% thumbnail page.building_of_the_week.thumbnail 400x225 crop='0,0' %}" class="img-rounded" style="width: 100%;"></a>
