--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -77,7 +77,19 @@
 				{{ page.body|safe }}
 			</div>
 		</div>
-		<div class="col-xs-12 col-md-4"><!-- Latest contributions -->
+		<div class="col-xs-12 col-md-4"><!-- Latest contributions and Newsletter -->
+			<h1 class="front-page-heading">Subscribe to our Newsletter</h1>
+			<form action="https://tinyletter.com/surveyoflondon" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/surveyoflondon', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
+				<div class="input-group">
+					<input type="text" name="email" id="tlemail" class="form-control" placeholder="Email" /><br />
+					<span class="input-group-btn">
+						<input type="submit" value="Subscribe" class="btn btn-default" />
+					</span>
+				</div>
+				<p><a href="https://tinyletter.com" target="_blank">Powered by TinyLetter</a></p>
+				<input type="hidden" value="1" name="embed"/>
+			</form>
+			<hr />
 			<h1 class="front-page-heading">Latest Contributions</h1>
 			{% for item in latest|slice:":4" %}
 			{% if item.created != None %}
