added events listing capabilities

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -525,7 +525,11 @@ p.results-preview {
 	display: inline-block;
 	float: right;
 }
-
+.event_header {
+	display: block;
+	height: 150px;
+	background-position: center;
+}
 
 /* Medium Editor */
 
