--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -120,7 +120,8 @@
 			      	<ul class="nav navbar-nav navbar-right">
 	    				<li><a href="{% url 'site_home' %}">Home</a></li>
 	    				<li><a href="{% url 'map_home' %}">Map</a></li>
-	    				<li><a href="{% url 'blog' %}">News</a></li>
+	    				<li><a href="{% url 'blog' %}">Blog</a></li>
+	    				<li><a href="{% url 'listings' %}">Events</a></li>
 	    				<li class="dropdown">
     						<a id="categoryLinksLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button">Themes <span class="caret"></span></a>
     						<ul class="dropdown-menu" aria-labelledby="categoryLinksLabel">
@@ -167,6 +168,19 @@
 						<a href="https://twitter.com/SoL_Whitechapel" class="twitter-follow-button" data-show-count="false">Follow @SoL_Whitechapel</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script><br />
 						<div class="fb-follow" data-href="https://www.facebook.com/surveyoflondon" data-layout="button" data-size="small" data-show-faces="true"></div>
 						<hr />
+						<!-- Newsletter Sign Up-->
+						<h3 class="front-page-heading">Sign up for our Newsletter</h1>
+						<form action="https://tinyletter.com/surveyoflondon" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/surveyoflondon', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
+							<div class="input-group">
+								<input type="text" name="email" id="tlemail" class="form-control" placeholder="Email" /><br />
+								<span class="input-group-btn">
+									<input type="submit" value="Subscribe" class="btn btn-default" />
+								</span>
+							</div>
+							<p><a href="https://tinyletter.com" target="_blank">Powered by TinyLetter</a></p>
+							<input type="hidden" value="1" name="embed"/>
+						</form>
+						<!-- / Newsletter -->
 					</div>
 					<div class="col-xs-12 col-md-4 row">
 						<div class="col-xs-12">
