--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -133,6 +133,8 @@
 					{% load crispy_forms_tags %}
 					{% csrf_token %}
 					{{ form|crispy }}
+					{% load honeypot %}
+	            	{% render_honeypot_field "phone_number" %}
 					<button type="submit" class="btn btn-default">Submit</button>
 				</form>
 			</div>
