--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -95,41 +95,38 @@
 		<div class="col-xs-12 col-md-8">
 			<!-- Latest contributions  -->
 			<h1 class="front-page-heading">Latest Submissions</h1>
-		</div>
-		<div class="col-xs-12 col-md-4">
-			<h1 class="front-page-heading">Quick Contribution</h1>
-		</div>
-	</div>
-	<div class="row">
-		{% for item in latest|slice:":2" %}
-		{% if item.created != None %}
-			{% if item.file %}
-			<div class="col-xs-12 col-md-4">
-				<a href="{% url 'detail' item.feature.id %}#images"><img src="{% thumbnail item.file 400x225 crop='0,0' %}" style="width: 100%;"></a>
-				<h3><a href="{% url 'detail' item.feature.id %}#images">{{ item.title }}</a></h3>
-				<h4 class="small"><a href="{% url 'detail' item.feature.id %}">{{ item.feature }}</a> | <a href="{% url 'all_content_by_author' item.author.id %}">{% if item.author.userprofile.display_name %}{{ item.author.userprofile.display_name }}{% else %}{{ item.author }}{% endif %}</a> | {{ item.created }}</h4>
-				<p class="results-preview">{{ item.description|truncatewords_html:20|striptags }}</p>
+			<div class="row">	
+			{% for item in latest|slice:":2" %}
+			{% if item.created != None %}
+				{% if item.file %}
+				<div class="col-xs-12 col-md-6">
+					<a href="{% url 'detail' item.feature.id %}#images"><img src="{% thumbnail item.file 400x225 crop='0,0' %}" style="width: 100%;"></a>
+					<h3><a href="{% url 'detail' item.feature.id %}#images">{{ item.title }}</a></h3>
+					<h4 class="small"><a href="{% url 'detail' item.feature.id %}">{{ item.feature }}</a> | <a href="{% url 'all_content_by_author' item.author.id %}">{% if item.author.userprofile.display_name %}{{ item.author.userprofile.display_name }}{% else %}{{ item.author }}{% endif %}</a> | {{ item.created }}</h4>
+					<p class="results-preview">{{ item.description|truncatewords_html:20|striptags }}</p>
+				</div>
+				{% else %}
+				<div class="col-xs-12 col-md-6">
+					<a href="{% url 'detail' item.feature.id %}#{{ item.document_type }}?{{ item.title|slugify }}"><img src="{% thumbnail item.feature.thumbnail 400x225 crop='0,0' %}" style="width: 100%;"></a>
+					<h3><a href="{% url 'detail' item.feature.id %}#{{ item.document_type }}?{{ item.title|slugify }}">{{ item.title }}</a></h3>
+					<h4 class="small"><a href="{% url 'detail' item.feature.id %}">{{ item.feature }}</a> | <a href="{% url 'all_content_by_author' item.author.id %}">{% if item.author.userprofile.display_name %}{{ item.author.userprofile.display_name }}{% else %}{{ item.author }}{% endif %}</a> | {{ item.created }}</h4>
+					{% if item.body_processed %}
+					<p class="results-preview">{{ item.body_processed|truncatewords_html:60|striptags }}</p>
+					{% elif item.description %}
+					<p class="results-preview">{{ item.description|truncatewords_html:60|striptags }}</p>
+					{% endif %}
+				</div>
+				{% endif %}		
+			{% endif %}
+			{% endfor %}
 			</div>
-			{% else %}
-			<div class="col-xs-12 col-md-4">
-				<a href="{% url 'detail' item.feature.id %}#{{ item.document_type }}?{{ item.title|slugify }}"><img src="{% thumbnail item.feature.thumbnail 400x225 crop='0,0' %}" style="width: 100%;"></a>
-				<h3><a href="{% url 'detail' item.feature.id %}#{{ item.document_type }}?{{ item.title|slugify }}">{{ item.title }}</a></h3>
-				<h4 class="small"><a href="{% url 'detail' item.feature.id %}">{{ item.feature }}</a> | <a href="{% url 'all_content_by_author' item.author.id %}">{% if item.author.userprofile.display_name %}{{ item.author.userprofile.display_name }}{% else %}{{ item.author }}{% endif %}</a> | {{ item.created }}</h4>
-				{% if item.body_processed %}
-				<p class="results-preview">{{ item.body_processed|truncatewords_html:60|striptags }}</p>
-				{% elif item.description %}
-				<p class="results-preview">{{ item.description|truncatewords_html:60|striptags }}</p>
-				{% endif %}
-			</div>
-			{% endif %}		
-		{% endif %}
-		{% endfor %}
-		<!-- / Latest contributions -->
+		</div><!-- / Latest contributions -->
 		<div class="col-xs-12 col-md-4">
 			<!-- Quick contribution -->
+			<h1 class="front-page-heading">Quick Contribution</h1>
 			<div class="quick-contribution">
 				<form role="form" action="" method="post">
-					<p>If you'd rather not sign up for an account, you can tell us your memories of Whitechapel using the form below</p>
+					<p>If you'd rather not register with us, you can tell us your memories of Whitechapel using the form below</p>
 					{% load crispy_forms_tags %}
 					{% csrf_token %}
 					{{ form|crispy }}
