re-generated map tiles; minor tweaks to events post templates

--- a/templates/whitechapel_blog/post.html
+++ b/templates/whitechapel_blog/post.html
@@ -4,7 +4,10 @@
 		<a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=" data-url="https://surveyoflondon.org{{ post.get_absolute_url }}">Tweet</a>
 		<div class="fb-share-button" data-href="https://surveyoflondon.org{{ post.get_absolute_url }}" data-layout="button_count"></div>
 	</div>
-	<p><a href="{% url 'posts_by_author' post.author.id %}">{% if post.author.userprofile.display_name %}{{ post.author.userprofile.display_name }}{% else %}{{ post.author }}{% endif %}</a> | {{ post.date_published }}{% if request.user.is_staff and request.user.is_authenticated %} <a href="{% url 'admin:whitechapel_blog_post_change' post.id %}" class="btn btn-default btn-sm">Edit</a>{% endif %}</p>
+	<p><small><a href="{% url 'posts_by_author' post.author.id %}">{% if post.author.userprofile.display_name %}Posted by {{ post.author.userprofile.display_name }}{% else %}{{ post.author }}{% endif %}</a> on {{ post.date_published }}{% if request.user.is_staff and request.user.is_authenticated %} <a href="{% url 'admin:whitechapel_blog_post_change' post.id %}" class="btn btn-default btn-sm">Edit</a>{% endif %}</small></p>
+	{% if post.event_date_start %}
+	<h4><em><strong>Date and Time: </strong>{% if post.event_time %}{{ post.event_time }}, {% endif %}{{ post.event_date_start|date:'l jS F, Y'}} {% if post.event_date_end %} - {{ post.event_date_end|date:'l jS F, Y' }}{% endif %}</em></h4>
+	{% endif %}
 	
 	{{ post.body|safe }}
 	{% if post.categories.all %}<p class="results-preview">Posted in {% for category in post.categories.all %}<a href="{% url 'posts_by_category' category.slug %}">{{ category }}</a> {% endfor %}</p>{% endif %}
