--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -162,8 +162,8 @@
 					</div>
 					<div class="col-xs-12 col-md-4">
 						<h3 class="front-page-heading">Contact</h3>
-						<p>Survey of London, c/o Historic England, 1 Waterhouse Square, 138-142 Holborn, London EC1N 2ST.</p>
-						<p>Tel. +44 (0)20 7973 3643/4<br />
+						<p>Survey of London, The Bartlett School of Architecture, 22 Gordon Street, London WC1H OQB</p>
+						<p>Tel. +44 (0)20 3108 6125<br />
 						Email. <a href="mailto:solwhitechapel.bartlett@ucl.ac.uk">solwhitechapel.bartlett@ucl.ac.uk</a></p>
 						<a href="https://twitter.com/SoL_Whitechapel" class="twitter-follow-button" data-show-count="false">Follow @SoL_Whitechapel</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script><br />
 						<div class="fb-follow" data-href="https://www.facebook.com/surveyoflondon" data-layout="button" data-size="small" data-show-faces="true"></div>
