enabled maintenance mode

--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -74,6 +74,8 @@
 		<div class="col-xs-12 col-md-8">
 			<!-- Front Page Text -->
 			<div class="front-page-about">
+				<h1 class="front-page-heading">Website Maintenance</h1>
+				<p class="lead"><strong>Due to essential work at UCL, this site will be in 'maintenance mode' between the 15th and 18th December. The site may be unavailable between these dates,and you won't be able to make any submissions. If you have something you'd like to contribute, please email the editors with your submission.</strong></p>
 				<h1 class="front-page-heading">{{ page.title }}</h1>
 				{{ page.body|safe }}
 			</div>
@@ -140,9 +142,9 @@
 			{% endfor %}
 			</div>
 		</div><!-- / Latest contributions -->
-		<div class="col-xs-12 col-md-4">
+		<!--<div class="col-xs-12 col-md-4">-->
 			<!-- Quick contribution -->
-			<h1 class="front-page-heading">Quick Contribution</h1>
+			<!--<h1 class="front-page-heading">Quick Contribution</h1>
 			<div class="quick-contribution">
 				<form role="form" action="" method="post">
 					<p>If you'd rather not register with us, you can tell us your memories of Whitechapel using the form below</p>
@@ -153,9 +155,9 @@
 	            	{% render_honeypot_field "phone_number" %}
 					<button type="submit" class="btn btn-default">Submit</button>
 				</form>
-			</div>
+			</div>-->
 			<!-- / Quick contribution -->
-		</div>
+		<!--</div>-->
 	</div>
 	<div class="row">
 		<div class="col-xs-12">
